--- a/gui.ui
+++ b/gui.ui
@@ -77,7 +77,7 @@
      <layout class="QVBoxLayout" name="copied_container"/>
     </item>
     <item row="0" column="3">
-     <widget class="QLabel" name="label_2">
+     <widget class="QLabel" name="copied_label">
       <property name="enabled">
        <bool>false</bool>
       </property>
@@ -149,7 +149,7 @@
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QLabel" name="label">
+     <widget class="QLabel" name="spacer">
       <property name="minimumSize">
        <size>
         <width>128</width>
@@ -192,7 +192,8 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionooo"/>
+    <addaction name="actionSave"/>
+    <addaction name="actionLoad"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
@@ -204,14 +205,25 @@
    <addaction name="menuEdit"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionooo">
+  <action name="actionSave">
+   <property name="icon">
+    <iconset theme="document-save"/>
+   </property>
    <property name="text">
-    <string>ooo</string>
+    <string>Save</string>
    </property>
   </action>
   <action name="actionidk">
    <property name="text">
     <string>idk</string>
+   </property>
+  </action>
+  <action name="actionLoad">
+   <property name="icon">
+    <iconset theme="document-open"/>
+   </property>
+   <property name="text">
+    <string>Load</string>
    </property>
   </action>
  </widget>
