add load mot button

--- a/gui.ui
+++ b/gui.ui
@@ -20,7 +20,6 @@
      <height>0</height>
     </size>
    </property>
-   <layout class="QGridLayout" name="central_grid"/>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -34,14 +33,14 @@
    <property name="nativeMenuBar">
     <bool>false</bool>
    </property>
-   <widget class="QMenu" name="menuFile">
+   <widget class="QMenu" name="menu_file">
     <property name="title">
      <string>File</string>
     </property>
     <addaction name="action_save"/>
     <addaction name="action_load"/>
    </widget>
-   <addaction name="menuFile"/>
+   <addaction name="menu_file"/>
   </widget>
   <widget class="QStatusBar" name="statusbar">
    <property name="sizeGripEnabled">
@@ -66,30 +65,8 @@
    <attribute name="dockWidgetArea">
     <number>1</number>
    </attribute>
-   <widget class="QWidget" name="dockWidgetContents_3">
+   <widget class="QWidget" name="settings_widget">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="1" column="5">
-      <widget class="QLabel" name="stages_label">
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>16</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>16777215</width>
-         <height>16</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>Stages</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="6">
       <widget class="QLabel" name="copied_label">
        <property name="enabled">
@@ -115,55 +92,8 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="3">
-      <widget class="QLabel" name="dc_label">
-       <property name="minimumSize">
-        <size>
-         <width>128</width>
-         <height>16</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>128</width>
-         <height>16</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>DC Values</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="4">
-      <widget class="QLabel" name="spacer">
-       <property name="minimumSize">
-        <size>
-         <width>128</width>
-         <height>16</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>128</width>
-         <height>16</height>
-        </size>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
      <item row="2" column="4">
       <layout class="QVBoxLayout" name="label_container"/>
-     </item>
-     <item row="2" column="3">
-      <layout class="QVBoxLayout" name="dc_container"/>
-     </item>
-     <item row="2" column="6">
-      <layout class="QVBoxLayout" name="copied_container"/>
      </item>
      <item row="2" column="5">
       <widget class="QScrollArea" name="stages_scroll">
@@ -188,7 +118,7 @@
           <x>0</x>
           <y>0</y>
           <width>219</width>
-          <height>586</height>
+          <height>566</height>
          </rect>
         </property>
         <layout class="QHBoxLayout" name="stages_container">
@@ -208,11 +138,134 @@
        </widget>
       </widget>
      </item>
-     <item row="4" column="6">
-      <widget class="QPushButton" name="run_experiment">
-       <property name="text">
-        <string>Run Experiment</string>
+     <item row="2" column="3">
+      <layout class="QVBoxLayout" name="dc_container"/>
+     </item>
+     <item row="1" column="4">
+      <widget class="QLabel" name="spacer">
+       <property name="minimumSize">
+        <size>
+         <width>128</width>
+         <height>16</height>
+        </size>
        </property>
+       <property name="maximumSize">
+        <size>
+         <width>128</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="3">
+      <widget class="QLabel" name="dc_label">
+       <property name="minimumSize">
+        <size>
+         <width>128</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>128</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>DC Values</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="5">
+      <widget class="QLabel" name="stages_label">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Stages</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="6">
+      <layout class="QVBoxLayout" name="copied_container"/>
+     </item>
+     <item row="3" column="3" colspan="4">
+      <widget class="QFrame" name="frame">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
+       </property>
+       <layout class="QGridLayout" name="gridLayout_2">
+        <item row="0" column="3">
+         <widget class="QPushButton" name="run_experiment">
+          <property name="maximumSize">
+           <size>
+            <width>128</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Run Experiment</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <spacer name="spacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="0" column="2">
+         <widget class="QLCDNumber" name="number">
+          <property name="maximumSize">
+           <size>
+            <width>128</width>
+            <height>16777215</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QCheckBox" name="load_mot">
+          <property name="text">
+           <string>Load MOT</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </item>
     </layout>
