--- a/gui.ui
+++ b/gui.ui
@@ -118,7 +118,7 @@
           <x>0</x>
           <y>0</y>
           <width>219</width>
-          <height>566</height>
+          <height>68</height>
          </rect>
         </property>
         <layout class="QHBoxLayout" name="stages_container">
@@ -269,6 +269,17 @@
       </widget>
      </item>
     </layout>
+   </widget>
+  </widget>
+  <widget class="QDockWidget" name="fluorescence_dock">
+   <property name="windowTitle">
+    <string>Fluorescence</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>8</number>
+   </attribute>
+   <widget class="QWidget" name="fluorescence_widget">
+    <layout class="QGridLayout" name="fluorescence_grid"/>
    </widget>
   </widget>
   <action name="action_save">
