--- a/gui.ui
+++ b/gui.ui
@@ -243,7 +243,7 @@
          </widget>
         </item>
         <item row="0" column="4">
-         <widget class="QPushButton" name="multi_go">
+         <widget class="QPushButton" name="multigo">
           <property name="text">
            <string>Multi Go</string>
           </property>
