--- a/gui.ui
+++ b/gui.ui
@@ -117,7 +117,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>156</width>
+          <width>219</width>
           <height>68</height>
          </rect>
         </property>
@@ -223,6 +223,13 @@
        </property>
        <layout class="QGridLayout" name="gridLayout_2">
         <item row="0" column="5">
+         <widget class="QPushButton" name="multigo">
+          <property name="text">
+           <string>Multi Go</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="6">
          <widget class="QPushButton" name="run_experiment">
           <property name="maximumSize">
            <size>
@@ -242,14 +249,24 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="4">
-         <widget class="QPushButton" name="multigo">
-          <property name="text">
-           <string>Multi Go</string>
+        <item row="0" column="3">
+         <widget class="QLCDNumber" name="fluorescence">
+          <property name="maximumSize">
+           <size>
+            <width>128</width>
+            <height>16777215</height>
+           </size>
           </property>
          </widget>
         </item>
-        <item row="0" column="1">
+        <item row="0" column="4">
+         <widget class="QPushButton" name="options">
+          <property name="text">
+           <string>Options</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
          <spacer name="spacer_2">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -262,20 +279,10 @@
           </property>
          </spacer>
         </item>
-        <item row="0" column="2">
-         <widget class="QLCDNumber" name="fluorescence">
-          <property name="maximumSize">
-           <size>
-            <width>128</width>
-            <height>16777215</height>
-           </size>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="3">
-         <widget class="QPushButton" name="options">
+        <item row="0" column="1">
+         <widget class="QCheckBox" name="save_runs">
           <property name="text">
-           <string>Options</string>
+           <string>Save Runs</string>
           </property>
          </widget>
         </item>
