--- a/gui.ui
+++ b/gui.ui
@@ -117,8 +117,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>219</width>
-          <height>68</height>
+          <width>348</width>
+          <height>259</height>
          </rect>
         </property>
         <layout class="QHBoxLayout" name="stages_container">
@@ -223,50 +223,13 @@
        </property>
        <layout class="QGridLayout" name="gridLayout_2">
         <item row="0" column="5">
-         <widget class="QPushButton" name="multigo">
-          <property name="text">
-           <string>Multi Go</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="6">
-         <widget class="QPushButton" name="run_experiment">
-          <property name="maximumSize">
-           <size>
-            <width>128</width>
-            <height>16777215</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>Run Experiment</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0">
-         <widget class="QCheckBox" name="load_mot">
-          <property name="text">
-           <string>Load MOT</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="3">
-         <widget class="QLCDNumber" name="fluorescence">
-          <property name="maximumSize">
-           <size>
-            <width>128</width>
-            <height>16777215</height>
-           </size>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="4">
-         <widget class="QPushButton" name="options">
+         <widget class="QPushButton" name="multigo_options">
           <property name="text">
            <string>Options</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="2">
+        <item row="1" column="2">
          <spacer name="spacer_2">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -279,10 +242,61 @@
           </property>
          </spacer>
         </item>
-        <item row="0" column="1">
+        <item row="1" column="6">
+         <widget class="QPushButton" name="run_experiment">
+          <property name="maximumSize">
+           <size>
+            <width>128</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Run Experiment</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="5">
+         <widget class="QPushButton" name="multigo">
+          <property name="text">
+           <string>Multi Go</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QCheckBox" name="load_mot">
+          <property name="text">
+           <string>Load MOT</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
          <widget class="QCheckBox" name="save_runs">
           <property name="text">
            <string>Save Runs</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="4">
+         <widget class="QPushButton" name="ai">
+          <property name="text">
+           <string>AI</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="4">
+         <widget class="QPushButton" name="ai_options">
+          <property name="text">
+           <string>Options</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="6">
+         <widget class="QLCDNumber" name="fluorescence">
+          <property name="maximumSize">
+           <size>
+            <width>128</width>
+            <height>16777215</height>
+           </size>
           </property>
          </widget>
         </item>
@@ -293,6 +307,9 @@
    </widget>
   </widget>
   <widget class="QDockWidget" name="fluorescence_dock">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="windowTitle">
     <string>Fluorescence</string>
    </property>
