--- a/gui.ui
+++ b/gui.ui
@@ -27,7 +27,7 @@
      <x>0</x>
      <y>0</y>
      <width>1280</width>
-     <height>22</height>
+     <height>37</height>
     </rect>
    </property>
    <property name="nativeMenuBar">
@@ -47,18 +47,110 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QDockWidget" name="camera_dock">
+  <widget class="QDockWidget" name="controls_dock">
    <property name="windowTitle">
-    <string>Camera</string>
+    <string>Controls</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>2</number>
    </attribute>
-   <widget class="QWidget" name="camera_widget">
-    <layout class="QGridLayout" name="camera_grid"/>
+   <widget class="QWidget" name="controls_widget">
+    <layout class="QGridLayout" name="camera_grid">
+     <item row="4" column="0">
+      <widget class="QCheckBox" name="load_mot">
+       <property name="text">
+        <string>Load MOT</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="3">
+      <widget class="QPushButton" name="ai_options">
+       <property name="text">
+        <string>Options</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="3">
+      <widget class="QPushButton" name="ai">
+       <property name="text">
+        <string>AI</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="4">
+      <widget class="QPushButton" name="multigo">
+       <property name="text">
+        <string>Multi Go</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="4">
+      <widget class="QPushButton" name="multigo_options">
+       <property name="text">
+        <string>Options</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Orientation::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="1" column="0">
+      <widget class="QCheckBox" name="save_runs">
+       <property name="text">
+        <string>Save Runs</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="5">
+      <widget class="QLCDNumber" name="fluorescence">
+       <property name="maximumSize">
+        <size>
+         <width>128</width>
+         <height>16777215</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="5">
+      <widget class="QPushButton" name="run_experiment">
+       <property name="maximumSize">
+        <size>
+         <width>128</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Run Experiment</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="2">
+      <spacer name="spacer_2">
+       <property name="orientation">
+        <enum>Qt::Orientation::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
    </widget>
   </widget>
-  <widget class="QDockWidget" name="settings_dock">
+  <widget class="QDockWidget" name="stages_dock">
    <property name="windowTitle">
     <string>Settings</string>
    </property>
@@ -88,7 +180,7 @@
         <string>Copied</string>
        </property>
        <property name="alignment">
-        <set>Qt::AlignCenter</set>
+        <set>Qt::AlignmentFlag::AlignCenter</set>
        </property>
       </widget>
      </item>
@@ -104,10 +196,10 @@
         </sizepolicy>
        </property>
        <property name="frameShape">
-        <enum>QFrame::NoFrame</enum>
+        <enum>QFrame::Shape::NoFrame</enum>
        </property>
        <property name="verticalScrollBarPolicy">
-        <enum>Qt::ScrollBarAlwaysOff</enum>
+        <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
        </property>
        <property name="widgetResizable">
         <bool>true</bool>
@@ -117,8 +209,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>348</width>
-          <height>259</height>
+          <width>201</width>
+          <height>72</height>
          </rect>
         </property>
         <layout class="QHBoxLayout" name="stages_container">
@@ -178,7 +270,7 @@
         <string>DC Values</string>
        </property>
        <property name="alignment">
-        <set>Qt::AlignCenter</set>
+        <set>Qt::AlignmentFlag::AlignCenter</set>
        </property>
       </widget>
      </item>
@@ -200,108 +292,12 @@
         <string>Stages</string>
        </property>
        <property name="alignment">
-        <set>Qt::AlignCenter</set>
+        <set>Qt::AlignmentFlag::AlignCenter</set>
        </property>
       </widget>
      </item>
      <item row="2" column="6">
       <layout class="QVBoxLayout" name="copied_container"/>
-     </item>
-     <item row="3" column="3" colspan="4">
-      <widget class="QFrame" name="frame">
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
-       </property>
-       <layout class="QGridLayout" name="gridLayout_2">
-        <item row="0" column="5">
-         <widget class="QPushButton" name="multigo_options">
-          <property name="text">
-           <string>Options</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="2">
-         <spacer name="spacer_2">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="1" column="6">
-         <widget class="QPushButton" name="run_experiment">
-          <property name="maximumSize">
-           <size>
-            <width>128</width>
-            <height>16777215</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>Run Experiment</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="5">
-         <widget class="QPushButton" name="multigo">
-          <property name="text">
-           <string>Multi Go</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QCheckBox" name="load_mot">
-          <property name="text">
-           <string>Load MOT</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0">
-         <widget class="QCheckBox" name="save_runs">
-          <property name="text">
-           <string>Save Runs</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="4">
-         <widget class="QPushButton" name="ai">
-          <property name="text">
-           <string>AI</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="4">
-         <widget class="QPushButton" name="ai_options">
-          <property name="text">
-           <string>Options</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="6">
-         <widget class="QLCDNumber" name="fluorescence">
-          <property name="maximumSize">
-           <size>
-            <width>128</width>
-            <height>16777215</height>
-           </size>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </widget>
      </item>
     </layout>
    </widget>
@@ -320,10 +316,48 @@
     <layout class="QGridLayout" name="fluorescence_grid"/>
    </widget>
   </widget>
+  <widget class="QDockWidget" name="hidden_dock">
+   <property name="windowTitle">
+    <string>Hidden Variables</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>8</number>
+   </attribute>
+   <widget class="QWidget" name="hidden_widget">
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <layout class="QFormLayout" name="hidden_form"/>
+     </item>
+     <item>
+      <spacer name="spacer_3">
+       <property name="orientation">
+        <enum>Qt::Orientation::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>600</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QDockWidget" name="camera_dock">
+   <property name="windowTitle">
+    <string>Camera</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>8</number>
+   </attribute>
+   <widget class="QWidget" name="camera_widget">
+    <layout class="QGridLayout" name="gridLayout_3"/>
+   </widget>
+  </widget>
   <action name="action_save">
    <property name="icon">
-    <iconset theme="document-save">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="document-save"/>
    </property>
    <property name="text">
     <string>Save</string>
@@ -334,8 +368,7 @@
   </action>
   <action name="action_load">
    <property name="icon">
-    <iconset theme="document-open">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="document-open"/>
    </property>
    <property name="text">
     <string>Load</string>
